<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_about_heading"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <ImageView
            android:id="@+id/image_app"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/background_about"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="4dp"
            android:lineSpacingMultiplier="1.2"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/text_about_content"/>
    </LinearLayout>
</ScrollView>